fix: virtual list layout shifts on hover

--- a/src/internal/components/selectable-item/styles.scss
+++ b/src/internal/components/selectable-item/styles.scss
@@ -268,6 +268,12 @@
     padding-block-end: awsui.$border-divider-list-width;
   }
 }
+.selectable-item.virtual.highlighted,
+.selectable-item.virtual.selected {
+  > .measure-strut {
+    padding-block-start: calc(awsui.$border-divider-list-width + 2px);
+  }
+}
 
 .screenreader-content {
   @include styles.awsui-util-hide;
